Fix display for no badge but reviews on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -663,7 +663,7 @@ a:hover {
 
   .business-header {
     margin-top: 0px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     border-bottom: 0px;
     padding-bottom: 0px;
   }
